[tool.poetry]
name = "repl_python3_yuamaru"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
discord-components = "^2.1.2"
Flask = "^2.0.2"
PyNaCl = "^1.4.0"
jishaku = "^2.3.2"
spotdl = "^3.9.0"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
